force-app/main/default/objects/Banner__c/Banner__c.object-meta.xml
<CustomObject>
    <label>배너</label>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>배너 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>배너</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>