force-app/main/default/objects/Banner__c/fields/ButtonLabel__c.field-meta.xml
<CustomField>
    <fullName>ButtonLabel__c</fullName>
    <label>Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>