force-app/main/default/objects/Banner__c/fields/ButtonLink__c.field-meta.xml
<CustomField>
    <fullName>ButtonLink__c</fullName>
    <label>Button Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>