force-app/main/default/objects/Banner__c/fields/DisplayLocation__c.field-meta.xml
<CustomField>
    <fullName>DisplayLocation__c</fullName>
    <label>Display Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Landing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>