force-app/main/default/objects/Banner__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>