force-app/main/default/objects/Banner__c/fields/UseButton__c.field-meta.xml
<CustomField>
    <fullName>UseButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Button</label>
    <type>Checkbox</type>
</CustomField>